# email-triage-env

./: Dockerfile  README.md  client.py  demo.py  fix.py  fix2.py  fix3.py  fix4.py  fix5.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  environment.py
templates/: index.html
