[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-env"
version = "0.1.0"
description = "OpenEnv-compatible email triage RL environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "httpx",
    "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]